k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bookme
spec:
  selector:
    io.kompose.service: frontend
  ports:
    - name: "http"
      port: 80
      targetPort: 80
status:
  loadBalancer: {}
