k8s/mongo-bookme-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /home/cgawron/bin/kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-bookme
  name: mongo-bookme
  namespace: bookme
spec:
  ports:
    - name: "mongo"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo-bookme
status:
  loadBalancer: {}
